# beyond-the-light-cone

./: .gitignore  CHANGELOG.md  README.md  _headers  _redirects  asset_manifest.json  index.html  manifest.webmanifest  registerSW.js  sw.js  sw.js.map  workbox-2498e5ff.js  workbox-2498e5ff.js.map  wrangler.jsonc
02_Project_Documentation/: AUDIT_20260519_TEST_EVENT_TUTORIAL_HANDOFF.md  AUDIT_20260601_NARRATIVE_ART_DEEP_AUDIT.md  AUDIT_20260602_FULL_DOC_VS_CODE_GAP_ANALYSIS.md  AUDIT_20260603_GODOT_MIGRATION_FEASIBILITY.md  AUDIT_20260605_ART_ASSETS_STYLE_AUDIT.md  AUDIT_20260605_CG_LOSS_ANALYSIS.md  AUDIT_20260607_EVENT_TIMELINE_AUDIT.md  AUDIT_20260616_FULL_PROJECT_REGRESSION_AUDIT.md  AUDIT_20260616_TERMINOLOGY_AUDIT.md  AUDIT_20260616_TIMELINE_CIVILIZATION_AUDIT.md  AUDIT_20260621_ARCHITECTURE_REBUILD.md  AUDIT_20260621_COMPREHENSIVE_NARRATIVE_AUDIT.md  AUDIT_20260621_EVENT_CAUSALITY_AUDIT_REPORT.md  AUDIT_20260621_TERMINOLOGY_MISMATCH_REPORT.md  AUDIT_20260621_TEST_SYSTEM_ARCHITECTURE.md  AUDIT_20260622_ARCHITECTURE_REBUILD.md  AUDIT_20260622_BUG_IDENTIFICATION_REPORT.md  AUDIT_20260622_EVENT_CAUSALITY_ANALYSIS.md  AUDIT_20260622_PART1_4_VERIFICATION.md  AUDIT_20260622_TASK_REPORT.md  AUDIT_20260623_FULL_PROJECT_FAILURE_PATH_AUDIT.md  AUDIT_20260623_QA_CODE_AUDIT.md  AUDIT_20260624_AP_AI_BRAIN_REPORT.md  AUDIT_20260624_EVENT_BOARD_INTEGRATION_REPORT.md  AUDIT_20260624_FULL_CODE_BUG_AUDIT.md  AUDIT_20260624_PROGRESS_REAUDIT.md  (+107 more)
03_Web_Rebuild/src-tauri/: Cargo.toml  tauri.conf.json
03_Web_Rebuild/src-tauri/icons/: icon.icns
03_Web_Rebuild/src-tauri/src/: main.rs
(+431 files in other folders)
